yle-dl - download videos from Yle servers
Copyright 2009-2019 Antti Ajanki
Distributed under the GPL v3

<unreleased>

- Use ffmpeg instead of wget by default
- Embed subtitles to the downloaded video file when possible
- Display the output file name as part of the --showmetadata response
- Show a better error message if a failure might be caused by geo blocking

Version 20181221

- Fixed downloading of Areena audio streams
- Fixed support for some videos that are only available at a low resolution
- Include the series title in generated output file names
- Template for generated output file names: --output-template

Version 20181103

- yle-dl will use date-based version numbers from now on
- Support for new Areena radio streams
- More robust parsing for Elävä Arkisto
- To run tests that only succeed on a Finnish IP, set ENABLE_FINLAND_TESTS=1

21 Oct 2018, Version 2.37

- Fixed live radio stream downloading
- Use --proxy for all metadata calls
- Stop claiming that SOCKS5 proxies are supported

31 Aug 2018, Version 2.36

- Some streams previously failed because their type was misdetected
- More consistent title formatting

8 Aug 2018, version 2.35

- Improved support for European Athletics Championships streams
- Download the HLS variant of the live TV streams by default (same as the
  Areena web). Use "--backend adobehdsphp" to get back the earlier behaviour
  (downloading the HDS variant).
- Argument values can now be set in a config file. See yledl.conf.sample

12 Jul 2018, Version 2.34

- Possibility to download only the subtitles, not the video: --subtitlesonly
- All downloader backends can now be enabled or disabled using the --backend argument
- --showmetadata displays the available backends for each stream
- Fixed news clip downloading after changes to the Yle news site

19 Jun 2018, Version 2.33

- Support for the football world cup streams
- Fixed live radio streams. They were broken because of changes in Areena.

15 Apr 2018, Version 2.32
